Fix logo/menu overlapping issue on screen 768px and up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 
 header {
     background-color: rgb(66, 84, 72);
-    color: rgb(247,247,240);
+    color: rgb(255, 255, 255);
     position: fixed;
     width: 100%;
     height: 50px;
@@ -61,7 +61,6 @@ nav {
     font-size: 1.3em;
     padding: 5px 5px 7px 10px;
     line-height: 35px;
-    
 }
 
 header a {
@@ -286,22 +285,27 @@ header a {
     nav {
         position: absolute;
         display: block;
-        margin: 0;
-        padding: 0;
         text-align: center;
-        box-shadow: none;
+        box-shadow: 0px 5px 5px 0px rgb(102, 121, 108);
+        margin-top: -2px;
+    }
+
+    header {
+        background-color: rgb(66, 84, 72);
+        height: 70px;
     }
 
     #logo {
         font-size: 250%;
+        padding-bottom: 10px;
+        height: 70px;
     }
 
     #menu {
         display: flex;
         justify-content: space-evenly;
-        box-shadow: 0px 5px 5px 0px rgb(102, 121, 108);
         height: 50px;
-        font-size: 105%;
+        font-size: 120%;
     }
 
     #nav-toggle{
@@ -364,6 +368,26 @@ header a {
 }
 
 @media screen and (min-width: 1440px) {
+    nav {
+        position: absolute;
+        display: block;
+        text-align: center;
+        box-shadow: 0px 5px 5px 0px rgb(102, 121, 108);
+        margin-top: -2px;
+    }
+
+    #menu {
+        display: flex;
+        justify-content: space-evenly;
+        height: 50px;
+        font-size: 105%;
+    }
+    
+    header {
+        background-color: rgb(66, 84, 72);
+        height: 70px;
+    }
+
     #logo {
         font-size: 300%;
         margin-left: 30px;
